Add Rails 2.x and Rails 3.x Gemfiles for Travis CI.

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,10 @@ rvm:
  - 1.9.3
  - 2.0.0
  - ruby-head
+gemfiles:
+  - gemfiles/Gemfile.rails-2.x
+  - gemfiles/Gemfile.rails-3.x
+  - Gemfile
 notifications:
   recipients:
     - jarmo.p@gmail.com
