--- a/.travis.yml
+++ b/.travis.yml
@@ -1,14 +1,16 @@
 rvm:
- - 2.3.1
- - 2.2.5
+ - 2.6.2
+ - 2.5.5
+ - 2.4.5
  - ruby-head
 gemfile:
   - gemfiles/Gemfile.rails-2.x
   - gemfiles/Gemfile.rails-3.x
+  - gemfiles/Gemfile.rails-4.x
   - Gemfile
 notifications:
   recipients:
-    - jarmo.p@gmail.com
+    - jarmo@jarmopertman.com
 matrix:
   allow_failures:
     - rvm: ruby-head
