--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -87,7 +87,7 @@ jobs:
     runs-on: ubuntu-latest
     strategy:
       matrix:
-        rack-handler: ['puma', 'falcon', 'unicorn', 'thin']
+        rack-handler: ['puma', 'falcon', 'thin']
 
     env:
       BUNDLE_GEMFILE: ${{ github.workspace }}/gemfiles/${{ matrix.rack-handler }}.gemfile
